--- a/www.nass.gov.ng/aa84141d30f5a6828bc5a5c4a11f70841ac0f2a4.yml
+++ b/www.nass.gov.ng/aa84141d30f5a6828bc5a5c4a11f70841ac0f2a4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 14:06:28 GMT
+    - Tue, 20 Mar 2018 23:41:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LNnXTr2a%2CFL1ZIH-7Gq7o2; path=/
+    - PHPSESSID=kT3v%2CcloSDX5QHhQuKS4B1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 14:06:28 GMT
+recorded_at: Tue, 20 Mar 2018 23:41:09 GMT
