--- a/www.nass.gov.ng/b18c09e3c2ef2fc2d474551ec05d9fac869cfe93.yml
+++ b/www.nass.gov.ng/b18c09e3c2ef2fc2d474551ec05d9fac869cfe93.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 14:13:42 GMT
+    - Tue, 20 Mar 2018 23:50:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZrJ4xCsoIxZJ4m-5xFeOw2; path=/
+    - PHPSESSID=B3wyV%2CKUOndxI%2CgsM0xl31; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 14:13:42 GMT
+recorded_at: Tue, 20 Mar 2018 23:50:20 GMT
