--- a/www.nass.gov.ng/d2c04effacc8f30354acd148d637b328fd9258cc.yml
+++ b/www.nass.gov.ng/d2c04effacc8f30354acd148d637b328fd9258cc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 14:30:03 GMT
+    - Wed, 21 Mar 2018 00:11:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PyalTxCEaBPbJ-IzO-EZx2; path=/
+    - PHPSESSID=oC5d%2CHTbRalF-ZPvmJUsC0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 14:30:03 GMT
+recorded_at: Wed, 21 Mar 2018 00:11:04 GMT
