--- a/www.nass.gov.ng/f4fd1df228cf6325ce20a78e624c01a0e461c647.yml
+++ b/www.nass.gov.ng/f4fd1df228cf6325ce20a78e624c01a0e461c647.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 14:30:22 GMT
+    - Wed, 21 Mar 2018 00:11:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OaNS%2CogzkDNramzd%2CPvYm1; path=/
+    - PHPSESSID=p9Kh9vyh2qadyWacg6-813; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 14:30:22 GMT
+recorded_at: Wed, 21 Mar 2018 00:11:56 GMT
