--- a/www.nass.gov.ng/145f3ffb5152f0431e54ec13ae70c3fb3095cb6a.yml
+++ b/www.nass.gov.ng/145f3ffb5152f0431e54ec13ae70c3fb3095cb6a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 14:33:23 GMT
+    - Wed, 21 Mar 2018 00:14:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7Ox0vL1hWt%2Chfttzxfzeu1; path=/
+    - PHPSESSID=DAR1wYHEKRtYitjcd2X872; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 14:33:23 GMT
+recorded_at: Wed, 21 Mar 2018 00:14:22 GMT
