--- a/www.nass.gov.ng/567dce140cd1a5daf391558edbe6343ebc03d55b.yml
+++ b/www.nass.gov.ng/567dce140cd1a5daf391558edbe6343ebc03d55b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 14:36:10 GMT
+    - Wed, 21 Mar 2018 00:17:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1d6WBG9cLrEBlQ64owpKS2; path=/
+    - PHPSESSID=AElhS0C74ktXXVO%2Csm3HA3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 14:36:10 GMT
+recorded_at: Wed, 21 Mar 2018 00:17:00 GMT
