--- a/www.nass.gov.ng/4d09d99ef9d18f2fe92fa52fc52ea4e238fd0c23.yml
+++ b/www.nass.gov.ng/4d09d99ef9d18f2fe92fa52fc52ea4e238fd0c23.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 14:54:27 GMT
+    - Wed, 21 Mar 2018 00:34:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=S%2C3ngE2-DeV7ectWJGpNL2; path=/
+    - PHPSESSID=g1iTfxha8LYPY1BJ5Math3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 14:54:27 GMT
+recorded_at: Wed, 21 Mar 2018 00:34:08 GMT
