--- a/www.nass.gov.ng/e87911117ee3feb9741072dd5981cdee6792b58d.yml
+++ b/www.nass.gov.ng/e87911117ee3feb9741072dd5981cdee6792b58d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 14:57:12 GMT
+    - Wed, 21 Mar 2018 00:36:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RgrAkOt%2CM32dzkwyhTea41; path=/
+    - PHPSESSID=P%2CPxIETuneRGlO%2CzBlbP41; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 14:57:12 GMT
+recorded_at: Wed, 21 Mar 2018 00:36:06 GMT
