--- a/www.nass.gov.ng/b87920547896fd21a76cb3ff59e00628916d97b4.yml
+++ b/www.nass.gov.ng/b87920547896fd21a76cb3ff59e00628916d97b4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 14:58:00 GMT
+    - Wed, 21 Mar 2018 00:36:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7kv-oiWuRZl9WScWEozcY1; path=/
+    - PHPSESSID=K2KOI6G6%2C914d3Nh8Hjq60; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 14:58:00 GMT
+recorded_at: Wed, 21 Mar 2018 00:36:42 GMT
