--- a/www.nass.gov.ng/6ec4aa184de090f30a6896d6065a210e6d74a866.yml
+++ b/www.nass.gov.ng/6ec4aa184de090f30a6896d6065a210e6d74a866.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 14:59:02 GMT
+    - Wed, 21 Mar 2018 00:37:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=K5VjZ-v0hwDUREeQ5eBGq1; path=/
+    - PHPSESSID=piIJ295tUrMfF%2CU5SyUtA0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 14:59:02 GMT
+recorded_at: Wed, 21 Mar 2018 00:37:13 GMT
