--- a/www.nass.gov.ng/8355b861616cc9f9aa1d8b3835ac215e10ebf6df.yml
+++ b/www.nass.gov.ng/8355b861616cc9f9aa1d8b3835ac215e10ebf6df.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 15:01:33 GMT
+    - Wed, 21 Mar 2018 00:40:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kPPOFJTnJ5DeKHHtCNnX-0; path=/
+    - PHPSESSID=Anp4-9MVyv%2CkiPycrpzZV2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 15:01:33 GMT
+recorded_at: Wed, 21 Mar 2018 00:40:13 GMT
