--- a/www.nass.gov.ng/195a719521bbde79ef5cfd96e7044ecde6e0a3ea.yml
+++ b/www.nass.gov.ng/195a719521bbde79ef5cfd96e7044ecde6e0a3ea.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 15:03:47 GMT
+    - Wed, 21 Mar 2018 00:41:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5moE8UlnuX0gQto%2CbSDPe2; path=/
+    - PHPSESSID=LAJIWB0mARO7yqgydPx0W2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 15:03:47 GMT
+recorded_at: Wed, 21 Mar 2018 00:41:35 GMT
