--- a/www.nass.gov.ng/2288eced1d519bfa35f1d0fd3a0e0b26812d14a4.yml
+++ b/www.nass.gov.ng/2288eced1d519bfa35f1d0fd3a0e0b26812d14a4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 15:08:48 GMT
+    - Wed, 21 Mar 2018 00:46:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=u4F1MsETmcP4bIYm5Rznb3; path=/
+    - PHPSESSID=Fc0t%2Cctdv79fmu0awX4730; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 15:08:48 GMT
+recorded_at: Wed, 21 Mar 2018 00:46:38 GMT
