--- a/www.nass.gov.ng/0385ba6f7a279d51eebdd3cc262bea272595de68.yml
+++ b/www.nass.gov.ng/0385ba6f7a279d51eebdd3cc262bea272595de68.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 15:11:06 GMT
+    - Wed, 21 Mar 2018 00:48:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jkzFEeLUK%2CX1ok047r7yP3; path=/
+    - PHPSESSID=6%2C0haixpY6Hcs7ALkaCWK3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 15:11:06 GMT
+recorded_at: Wed, 21 Mar 2018 00:48:53 GMT
