--- a/www.nass.gov.ng/33f057529263cc6b439afabcef8497aff6474bc8.yml
+++ b/www.nass.gov.ng/33f057529263cc6b439afabcef8497aff6474bc8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 15:12:49 GMT
+    - Wed, 21 Mar 2018 00:50:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4TMkN%2CFk6nT0pbK7u4zNT0; path=/
+    - PHPSESSID=OdE6TMW2BKsCnH5eFxh-i2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 15:12:49 GMT
+recorded_at: Wed, 21 Mar 2018 00:50:12 GMT
