--- a/www.nass.gov.ng/697c3f16e70741cd7bafa69343da34bc1584bab1.yml
+++ b/www.nass.gov.ng/697c3f16e70741cd7bafa69343da34bc1584bab1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 15:19:37 GMT
+    - Wed, 21 Mar 2018 00:55:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=59PoWOC%2CjBcq%2C1Jrek9Mz3; path=/
+    - PHPSESSID=MFbXA6GzDoTomprtFNSgB1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 15:19:37 GMT
+recorded_at: Wed, 21 Mar 2018 00:55:48 GMT
