--- a/www.nass.gov.ng/b486f602dbdefbe6ead2a88b3a53a7bfa2d1eb70.yml
+++ b/www.nass.gov.ng/b486f602dbdefbe6ead2a88b3a53a7bfa2d1eb70.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 15:31:10 GMT
+    - Wed, 21 Mar 2018 01:06:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=W2A9SBOolb%2CTm0knBglqt1; path=/
+    - PHPSESSID=fYcHOdPOe9BfaloUYVBnR0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 15:31:10 GMT
+recorded_at: Wed, 21 Mar 2018 01:06:19 GMT
