--- a/www.nass.gov.ng/3d86c741544627747d8b842090765232f9684ecb.yml
+++ b/www.nass.gov.ng/3d86c741544627747d8b842090765232f9684ecb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 20:19:12 GMT
+    - Wed, 21 Mar 2018 22:16:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OMa3Zt%2CXnjwwMDighHivy0; path=/
+    - PHPSESSID=Yw9WYADZO%2C-uHo-xJ4Ba%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 20:19:12 GMT
+recorded_at: Wed, 21 Mar 2018 22:16:06 GMT
