--- a/www.nass.gov.ng/3f7ced6a6b559d7b2eacbc0b3df122041c32d2e9.yml
+++ b/www.nass.gov.ng/3f7ced6a6b559d7b2eacbc0b3df122041c32d2e9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 20:22:33 GMT
+    - Wed, 21 Mar 2018 22:17:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GYvbflXOpSU0GqtQJbHJD0; path=/
+    - PHPSESSID=%2CA3bfJIlAPMqAQ1VKdJ5d3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 20:22:33 GMT
+recorded_at: Wed, 21 Mar 2018 22:17:46 GMT
