--- a/www.nass.gov.ng/63d52c179504c4bee47aedc2578da61fc35c2261.yml
+++ b/www.nass.gov.ng/63d52c179504c4bee47aedc2578da61fc35c2261.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 20:32:20 GMT
+    - Wed, 21 Mar 2018 22:27:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0Iy%2CZG8HmJrnEm24snHLb1; path=/
+    - PHPSESSID=Hf0JY3EVQAYn2Aiep-8QN1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 20:32:20 GMT
+recorded_at: Wed, 21 Mar 2018 22:27:14 GMT
