--- a/www.nass.gov.ng/916445dde68b4dd165e955b1aec29b5e8b7b1d63.yml
+++ b/www.nass.gov.ng/916445dde68b4dd165e955b1aec29b5e8b7b1d63.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 20:34:37 GMT
+    - Wed, 21 Mar 2018 22:29:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RjpMsLXWeBmvS0XLT%2CEtu3; path=/
+    - PHPSESSID=jS4fDnP3EKfzS8EJ1H04q1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 20:34:37 GMT
+recorded_at: Wed, 21 Mar 2018 22:29:52 GMT
