--- a/www.nass.gov.ng/1737ae0b0e1da5384aab8e82fb91214811eb5e36.yml
+++ b/www.nass.gov.ng/1737ae0b0e1da5384aab8e82fb91214811eb5e36.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 20:36:20 GMT
+    - Wed, 21 Mar 2018 22:31:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hDi%2CAJ7cnHBhk7MlYBmj02; path=/
+    - PHPSESSID=7J1Iz-YEsUPNnfprWpYwa3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 20:36:20 GMT
+recorded_at: Wed, 21 Mar 2018 22:31:29 GMT
