--- a/www.nass.gov.ng/d6e9316c52882b39e14c601a30fdd03e08b4c0eb.yml
+++ b/www.nass.gov.ng/d6e9316c52882b39e14c601a30fdd03e08b4c0eb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 20:37:40 GMT
+    - Wed, 21 Mar 2018 22:33:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lC6RllC%2CNPGPo2-jiPrkN0; path=/
+    - PHPSESSID=eS9IzVRswZLo59WpvB%2CIc3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 20:37:40 GMT
+recorded_at: Wed, 21 Mar 2018 22:33:19 GMT
